<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tw.com.frankchang.houli.classno_03_changecolor.MainActivity"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/ColorList"
        android:gravity="center_horizontal"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="@dimen/Zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Red"
            android:checked="true"
            android:textSize="@dimen/TSize_20"
            android:textColor="@color/Red"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="@dimen/Zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Green"
            android:textSize="@dimen/TSize_20"
            android:textColor="@color/Green"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="@dimen/Zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Blue"
            android:textSize="@dimen/TSize_20"
            android:textColor="@color/Blue"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="@dimen/Zero"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:max="255"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="@dimen/Zero"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/Red"
            android:textSize="@dimen/TSize_20"
            android:textColor="@color/Red"/>
    </LinearLayout>

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/Black"
        android:textOn="@string/White"
        android:textSize="@dimen/TSize_20"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/ColorText"
        android:gravity="center"
        android:textSize="@dimen/TSize_30"/>
</LinearLayout>
